<resources>
    <string name="app_name">TODO_12</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="rb1">Same Day Messenger Service</string>
    <string name="rb2">Next Day Ground Delivery</string>
    <string name="rb3">Pick Up</string>
    <string name="delmethod">Choose a delivery method</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_address">address</string>
    <string name="enteradd">Enter address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="note">note</string>
    <string name="enternote">Enter note</string>
    <string-array name="spinnerDdown">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>