<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todo13">


    <RadioGroup
        android:layout_width="304dp"
        android:layout_height="198dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delmethod">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="272dp"
            android:layout_height="46dp"
            android:onClick="radiobtn"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:onClick="radiobtn"
            android:text="@string/rb3" />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:onClick="radiobtn"
            android:text="@string/rb2" />

    </RadioGroup>

    <TextView
        android:id="@+id/msg"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delmethod"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/delmethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnermain" />

    <Spinner
        android:id="@+id/spinnermain"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/phonee"
        app:layout_constraintTop_toTopOf="@+id/msg" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="55dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/enter_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="55dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address" />

    <TextView
        android:id="@+id/note"
        android:layout_width="55dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/name"
        android:layout_width="55dp"
        android:layout_height="23dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg" />

    <EditText
        android:id="@+id/namee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/msg" />

    <EditText
        android:id="@+id/addresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/enteradd"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Address"
        app:layout_constraintTop_toBottomOf="@id/namee" />

    <EditText
        android:id="@+id/phonee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/addresse"/>

    <EditText
        android:id="@+id/notee"
        android:layout_width="207dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/enternote"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/note"
        app:layout_constraintTop_toBottomOf="@+id/phonee" />

</androidx.constraintlayout.widget.ConstraintLayout>